Funcionalidades pendientes añadidas (Configuración de la contraseña)

--- a/index.html
+++ b/index.html
@@ -4,22 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generador de Contraseñas</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>Password Generatos</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
-    <div class="content">
-        <h1>Presione el Boton azul para generar su contraseña</h1>
+<body
+    class="bg-[url(./Assets/fondoGenerarContraseña.jpg)]  bg-cover bg-center min-h-screen flex items-center justify-center">
+    <div class="bg-white/30 backdrop-blur-md max-w-lg h-96 p-10 rounded-2xl">
+        <h1 class="text-4xl">Password Generator</h1>
+
+        <span>Capital Letters <p>(A-Z)</p></span>
+        <input type="checkbox" name="" id="ChkMayusculas" checked>
+
+        <span>Small Letters <p>(a-z)</p> </span>
+        <input type="checkbox" name="" id="ChkMinusculas" checked>
+
+        <span>Numeros <p>(0-9)</p> </span>
+        <input type="checkbox" name="" id="ChkNumeros" checked>
+
+        <span>Simbolos <p>(!#$%&...)</p> </span>
+        <input type="checkbox" name="" id="ChkSimbolos" checked>
+
         <h3>Longitud de la contraseña</h3>
-        <div class="longitud">
-            <input type="number" id="longitudContraseña" value="8" max="25" min="1">
-            <input type="range" id="range" value="8" max="25" min="1">
-        </div>
+
+        <input type="number" id="longitudContraseña" value="8" max="25" min="1">
+        <input type="range" id="range" value="8" max="25" min="1">
+
         <input type="text" placeholder="Su contraseña aparecera aqui." id="inputContraseña">
         <button id="botonGenerar">Generar!</button>
     </div>
 </body>
-<script src="./script.js"></script>
+<script src="./main.js"></script>
 
 </html>
